Fix meridien from shifting with timestamp change.

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -81,7 +81,7 @@ body
 
 .clock-widget .timestamp
     @include flex(row, nowrap, space-between, center)
-    padding-right: 0.8em
+    padding-right: 0.3em
     padding-left: 0.8em
     box-sizing: border-box
 
